<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPage1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imagePage2Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mentoring_gardens_logo" />

    <TextView
        android:id="@+id/titleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/day_header"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imagePage2Logo"
        app:layout_constraintStart_toStartOf="@+id/imagePage2Logo"
        app:layout_constraintTop_toBottomOf="@+id/imagePage2Logo" />

    <Button
        android:id="@+id/btnCommitted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonCommitted"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imagePage2Logo"
        app:layout_constraintStart_toStartOf="@+id/imagePage2Logo"
        app:layout_constraintTop_toBottomOf="@+id/titleSpinner" />

    <Button
        android:id="@+id/btnPotential"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/buttonLookUp"
        app:layout_constraintEnd_toEndOf="@+id/imagePage2Logo"
        app:layout_constraintStart_toStartOf="@+id/imagePage2Logo"
        app:layout_constraintTop_toBottomOf="@+id/btnCommitted" />

</android.support.constraint.ConstraintLayout>